--- a/style.css
+++ b/style.css
@@ -669,6 +669,9 @@ textarea {
     width: 30px;
     height: 100%;
   }
+  .menu-video iframe {
+    width: 450px;
+  }
 }
 @media (min-width: 850px) {
   #side-nav ul {
@@ -710,12 +713,28 @@ textarea {
   .menu-wrapper {
     max-width: 1020px;
   }
+  .menu-video iframe {
+    width: 650px;
+  }
 }
 @media (max-width: 360px) {
   .logo img {
     width: 100%;
     height: auto;
     padding-right: 20px;
+  }
+  .menu-video {
+    min-width: 150px;
+  }
+}
+@media (max-width: 550px) {
+  .menu-video iframe {
+    width: 100%;
+    height: 200px;
+    padding: 0px;
+  }
+  .menu-section h1 {
+    padding: 0px;
   }
 }
 
@@ -743,10 +762,10 @@ textarea {
   height: auto;
   padding-bottom: 10px;
 }
-.menu-video {
-  max-width: 60%;
+/* .menu-video {
   height: auto;
   object-fit: fill;
+  width: 100%;
 }
 .menu-video video {
   max-width: 60%;
@@ -756,7 +775,14 @@ textarea {
   width: 100%;
   display: flex;
   justify-content: center;
+  object-fit: fill;
 }
-/* body {
-  min-width: 1160px;
+.menu-video iframe {
+  max-width: 600px;
+  min-width: 300px;
+  height: 400;
 } */
+.menu-video {
+  padding: 50px;
+  object-fit: cover;
+}
